--- a/Irrigation.html
+++ b/Irrigation.html
@@ -75,7 +75,7 @@
 					<section id="portfolio" class="one">
 						<div class="container">
 
-							<a href="#" style="margin:30px 0 0 0;" class="image featured"><img src="images/Irrigation_Sketch.png" alt="" /></a>
+							<a href="#" style="margin:30px 0 0 0;" class="image featured"><img src="images/Irrigation/Sketch.png" alt="" /></a>
 
 							<header>
 								<h2 class="alt"><strong>Automatic Irrigation System for Household Gardens</strong></h2>
@@ -108,7 +108,7 @@
                        		<div class="row half" style="text-align:center;">
 									<div class="6u">
                                     	<strong>Approach</strong>
-                                        <a href="images/Irrigation_Process.png"  style="width='667'; height='522';" class="image featured"><img src="images/Irrigation_Process.png" alt="Process"></a>
+                                        <a href="images/Irrigation/Process.png"  style="width='667'; height='522';" class="image featured"><img src="images/Irrigation/Process.png" alt="Process"></a>
                                     </div>
                                     
 									<div class="6u">
@@ -140,13 +140,13 @@
                             <div class="row">
 								<div class="4u">
 									<article class="item">
-										<a href="images/Irrigation_Stand.jpg" class="image full"><img src="images/Irrigation_Stand.jpg" alt="" /></a>
+										<a href="images/Irrigation/Stand.jpg" class="image full"><img src="images/Irrigation/Stand.jpg" alt="" /></a>
 										<header>
 											<h3>Stand</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image full"><img src="images/Irrigation_PVCPipe.jpg" alt="" /></a>
+										<a href="#" class="image full"><img src="images/Irrigation/PVCPipe.jpg" alt="" /></a>
 										<header>
 											<h3>PVC Pipe for Stand(1.5ft/1ft/0.25ft)</h3>
 										</header>
@@ -154,13 +154,13 @@
 								</div>
 								<div class="4u">
 									<article class="item">
-										<a href="#" class="image full"><img src="images/Irrigation_Timer.jpg" alt="" /></a>
+										<a href="#" class="image full"><img src="images/Irrigation/Timer.jpg" alt="" /></a>
 										<header>
 											<h3>Automatic Timer (Functional Prototype using PIC-18 controller)</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image full"><img src="images/Irrigation_Shower.jpg" alt="" /></a>
+										<a href="#" class="image full"><img src="images/Irrigation/Shower.jpg" alt="" /></a>
 										<header>
 											<h3>Shower</h3>
 										</header>
@@ -168,13 +168,13 @@
 								</div>
 								<div class="4u">
 									<article class="item">
-										<a href="#" class="image full"><img src="images/Irrigation_Valve.jpg" alt="" /></a>
+										<a href="#" class="image full"><img src="images/Irrigation/Valve.jpg" alt="" /></a>
 										<header>
 											<h3>Flow Control Valve</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image full"><img src="images/Irrigation_Pipe.jpg" alt="" /></a>
+										<a href="#" class="image full"><img src="images/Irrigation/Pipe.jpg" alt="" /></a>
 										<header>
 											<h3>Pipe</h3>
 										</header>
@@ -185,13 +185,13 @@
                             <div class="row">
 								<div class="4u">
 									<article class="item">
-										<a href="#" class="image full"><img src="images/Irrigation_Tsection.jpg" alt="" /></a>
+										<a href="#" class="image full"><img src="images/Irrigation/Tsection.jpg" alt="" /></a>
 										<header>
 											<h3>T-Section</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image full"><img src="images/Irrigation_Elbow.jpg" alt="" /></a>
+										<a href="#" class="image full"><img src="images/Irrigation/Elbow.jpg" alt="" /></a>
 										<header>
 											<h3>Elbow</h3>
 										</header>
@@ -199,13 +199,13 @@
 								</div>
 								<div class="4u">
 									<article class="item">
-										<a href="#" class="image full"><img src="images/Irrigation_Pump.jpg" alt="" /></a>
+										<a href="#" class="image full"><img src="images/Irrigation/Pump.jpg" alt="" /></a>
 										<header>
 											<h3>Submersible Pump</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image full"><img src="images/Irrigation_Coupler.jpg" alt="" /></a>
+										<a href="#" class="image full"><img src="images/Irrigation/Coupler.jpg" alt="" /></a>
 										<header>
 											<h3>Coupler</h3>
 										</header>
@@ -213,13 +213,13 @@
 								</div>
 								<div class="4u">
 									<article class="item">
-										<a href="#" class="image full"><img src="images/Irrigation_2Threaded.jpg" alt="" /></a>
+										<a href="#" class="image full"><img src="images/Irrigation/2Threaded.jpg" alt="" /></a>
 										<header>
 											<h3>2 Way Threaded Nipple</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image full"><img src="images/Irrigation_Threaded.jpg" alt="" /></a>
+										<a href="#" class="image full"><img src="images/Irrigation/Threaded.jpg" alt="" /></a>
 										<header>
 											<h3>Threaded Nipple</h3>
 										</header>
