--- a/Home.html
+++ b/Home.html
@@ -211,7 +211,7 @@ In addition to my strong background in Mechanical Engineering, I also have a wor
  </div>
     <!--/ End contact content -->
 							
-							<form method="post" action="contact.php">
+							<form method="post" action="http://formspree.io/pratham@1pratham.com">
 								<div class="row half">
 									<div class="6u"><input type="text" class="text" name="name" placeholder="Name" /></div>
 									<div class="6u"><input type="text" class="text" name="email" placeholder="Email" /></div>
