--- a/Home.html
+++ b/Home.html
@@ -214,7 +214,7 @@ In addition to my strong background in Mechanical Engineering, I also have a wor
 							<form method="post" action="http://formspree.io/pratham@1pratham.com">
 								<div class="row half">
 									<div class="6u"><input type="text" class="text" name="name" placeholder="Name" /></div>
-									<div class="6u"><input type="text" class="text" name="email" placeholder="Email" /></div>
+									<div class="6u"><input type="text" class="text" name="_replyto" placeholder="Email" /></div>
 								</div>
 								<div class="row half">
 									<div class="12u">
