--- a/Home.html
+++ b/Home.html
@@ -88,13 +88,13 @@
 									<article class="item">
 										<a href="Beam.html" class="image full"><img src="images/Beam/BeamBox.png" alt="" /></a>
 										<header>
-											<a href="Beam.html"<h3>Kitchen Appliance for Millennials</h3><a>
+											<a href="Beam.html"><h3>Kitchen Appliance for Millennials</h3><a>
 										</header>
 									</article>
 									<article class="item">
 										<a href="Hat.html" class="image full"><img src="images/Hat/Hat.png" alt="" /></a>
 										<header>
-											<a href="Hat.html"<h3>Electronic Hat</h3></a>
+											<a href="Hat.html"><h3>Electronic Hat</h3></a>
 										</header>
 									</article>
 								</div>
@@ -102,13 +102,13 @@
 									<article class="item">
 										<a href="Chargers.html" class="image full"><img src="images/Chargers/32-port.png" alt="" /></a>
 										<header>
-											<a href="Chargers.html"<h3>Multi-port USB Chargers</h3></a>
+											<a href="Chargers.html"><h3>Multi-port USB Chargers</h3></a>
 										</header>
 									</article>
 									<article class="item">
 										<a href="Irrigation.html" class="image full"><img src="images/Irrigation/Stand.png" alt="" /></a>
 										<header>
-											<a href="Irrigation.html"<h3>Automatic Irrigation Kit</h3></a>
+											<a href="Irrigation.html"><h3>Automatic Irrigation Kit</h3></a>
 										</header>
 									</article>
 								</div>
@@ -116,24 +116,23 @@
 									<article class="item">
 										<a href="Cosmetics.html" class="image full"><img src="images/Cosmetics/Craft.png" alt="" /></a>
 										<header>
-											<a href="Cosmetics.html"<h3>Custom Cosmetics</h3></a>
+											<a href="Cosmetics.html"><h3>Custom Cosmetics</h3></a>
 										</header>
 									</article>
 									<article class="item">
 										<a href="POS.html" class="image full"><img src="images/POS/POS.png" alt="" /></a>
 										<header>
-											<a href="POS.html"<h3>Point of Sale System</h3></a>
+											<a href="POS.html"><h3>Point of Sale System</h3></a>
 										</header>
 									</article>
 								</div>
 							</div>
-                            <p>
                             <div class="row">
 								<div class="4u">
 									<article class="item">
 										<a href="Snoopy.html" class="image full"><img src="images/Snoopy/Snoopy.png" alt="" /></a>
 										<header>
-											<a href="Snoopy.html"<h3>Connected Pet Product</h3></a>
+											<a href="Snoopy.html"><h3>Connected Pet Product</h3></a>
 										</header>
 									</article>	
                                     								
@@ -142,13 +141,13 @@
 									<article class="item">
 										<a href="Air.html" class="image full"><img src="images/Air/AirFreshOne.png" alt="" /></a>
 										<header>
-											<a href="Air.html"<h3>Air Fresh One</h3></a>
+											<a href="Air.html"><h3>Air Fresh One</h3></a>
 										</header>
 									</article>
                                     <article class="item">
 										<a href="Texturing.html" class="image full"><img src="images/Texturing/Goniometer.png" alt="" /></a>
 										<header>
-											<a href="Texturing.html"<h3>Micro Texturing on Metal Surface</h3><a>
+											<a href="Texturing.html"><h3>Micro Texturing on Metal Surface</h3><a>
 										</header>
 									</article>									
 								</div>
@@ -156,7 +155,7 @@
 									<article class="item">
 										<a href="Shelf.html" class="image full"><img src="images/Shelf/Shelf.png" alt="" /></a>
 										<header>
-											<a href="Shelf.html"<h3>Switching of Book Shelves</h3></a>
+											<a href="Shelf.html"><h3>Switching of Book Shelves</h3></a>
 										</header>
 									</article>									
 								</div>
@@ -164,6 +163,7 @@
 							</div>
                             
                             <footer>
+                            	<a href="http://zestpc.com" class="button scrolly">Zest PC</a>
                             	<a href="Solidmodeling.html" class="button scrolly">Solid Modeling</a>
 								<a href="Websites.html" class="button scrolly">Websites Developed</a>
                                 <a href="Survey.html" class="button scrolly">Surveys Conducted</a>
